# toomanychats

./: .gitignore  README.md  client.py  database.py  encryption.py  generate_ssl_tls.py  install.sh  pyproject.toml  requirements.txt  server.py  setup.py  ui.py
gui/: bubble_tests.py  config.ini  main_window.py
gui/widgets/: __init__.py  bubble_tests.py  chat_screen.py  enter_screen.py  signin_screen.py  signup_screen.py
gui/widgets/components/: __init__.py  chat_header.py  chatroom_item.py  chatroom_list.py  custom_menu.py  dialog.py  doc_attachment.py  doc_dialog.py  ellipsis_label.py  image_preview.py  message_container.py  scroll_area.py  server_dialog.py  single_image.py  splitter.py  text_bubble.py  textarea.py  textfield.py  totp_dialog.py  video_widget.py
gui/widgets/custom/: __init__.py  textarea.py  textfield.py
gui/widgets/message/: __init__.py  message_renderer.py  misc.py  parser.py  receiver.py  sender.py
gui/widgets/utils/: encryption.py  tools.py
gui/widgets/utils/services/: __init__.py  receiver_service.py  sender_service.py
scripts/: install_linux.sh  install_win.bat  script.sql
